--- a/pages/catalogo/catalogo.css
+++ b/pages/catalogo/catalogo.css
@@ -66,12 +66,26 @@ nav a:hover {
   width: 500px;
   height: 500px;
 }
+.icon-img{
+  width: 40px;
+  height: 40px;
+}
+.button-icon{
+  border: none;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.button-icon img:hover{
+  transform: scale(.9);
+}
+
 .ul-catalogo {
     margin: 20px;
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-column-gap: 18px;
     grid-row-gap: 18px;
   }
@@ -97,13 +111,4 @@ nav a:hover {
   .li-img-catalogo {
     width: 100px;
     height: 100px;
-  }
-  .div-info-catalogo button{
-    padding: 5px;
-    margin: 5px;
-    border-radius: 8px;
-  }
-  .div-info-catalogo button:hover{
-    background-color: var(--color-secondary);
-    color: var(--color-primary);
   }
