--- a/pages/carrito/carrito.css
+++ b/pages/carrito/carrito.css
@@ -4,12 +4,76 @@
 :root {
   --color-primary: #a8d4b8;
   --color-secondary: #576c68;
+  --tw-shadow: 6px -9px 39px -18px rgba(0, 0, 0, 0.646);
   /* var(color-primary) */
 }
 * {
+  list-style: none;
   background-color: rgb(255, 254, 254);
   color: #576c68;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   transition: 0.3s all;
+}
+h1 {
+  text-align: center;
+}
+.section-carrito {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+#carrito {
+  width: 94%;
+  height: 80vh;
+  overflow-y: scroll;
+  border: 1px solid var(--color-secondary);
+  border-radius: 13px;
+}
+.li-carrito {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--color-secondary);
+  border-radius: 13px;
+}
+.btn-sum-res button {
+  border: none;
+  padding: 5px 10px;
+  margin: 5px 0px;
+  border-radius: 5px;
+}
+.btn-delete {
+  border: none;
+  padding: 5px 10px;
+  margin: 5px 0px;
+  border-radius: 5px;
+  background-color: rgb(123, 23, 23);
+  color: #fff;
+}
+.btn-sum-res button:first-child {
+  background-color: var(--color-secondary);
+  color: var(--color-primary);
+}
+.btn-sum-res button:last-child {
+  background-color: var(--color-primary);
+}
+.total-carrito {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: var(--tw-shadow);
+  width: 94%;
+  height: 80vh;
+  border-radius: 13px;
+  padding: 20px;
+  background-color: var(--color-secondary);
+  text-align: center;
+}
+.total-carrito h2,
+span {
+  color: var(--color-primary);
+  background-color: var(--color-secondary);
 }
