--- a/pages/catalogo/catalogo.css
+++ b/pages/catalogo/catalogo.css
@@ -99,6 +99,13 @@ nav a:hover {
     border: 1px solid #a8d4b8;
     box-shadow: 0 15px 25px -5px rgb(0 0 0 / 0.25);
   }
+  .div-precio-catalogo{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 3px;
+  }
   .h1-catalogo {
     color: #576c68;
   }
