--- a/pages/carrito/carrito.css
+++ b/pages/carrito/carrito.css
@@ -15,10 +15,25 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   transition: 0.3s all;
 }
+img{
+  width: 100px;
+  height: 100px;
+  object-fit: scale-down;
+}
+.carrito-h1{
+  text-align: center;
+  font-size: x-large;
+  margin: 10px 0px 10px 0px;
+}
+
 h1 {
   text-align: center;
+  font-size: x-large;
+  margin: 10px 0px 10px 0px;
 }
+
 .section-carrito {
+  margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
@@ -57,6 +72,7 @@ h1 {
   color: var(--color-primary);
 }
 .btn-sum-res button:last-child {
+  color: var(--color-secondary);
   background-color: var(--color-primary);
 }
 .total-carrito {
@@ -72,8 +88,27 @@ h1 {
   background-color: var(--color-secondary);
   text-align: center;
 }
+.total-carrito h2 {
+  text-decoration: underline;
+
+}
 .total-carrito h2,
-span {
+.total-carrito span,button {
   color: var(--color-primary);
   background-color: var(--color-secondary);
+}
+.total-carrito button {
+  color: var(--color-primary);
+  margin: 10px;
+  padding: 5px 10px 5px 10px;
+  border: 1px solid var(--color-primary);
+  border-radius: 8px;
+}
+.total-carrito button:active{
+  background-color: var(--color-primary);
+  color: var(--color-secondary);
+}
+.total-carrito span,.total-carrito h2 {
+  font-size: x-large;
+  font-weight: 600;
 }
