--- a/pages/carrito/carrito.css
+++ b/pages/carrito/carrito.css
@@ -12,6 +12,8 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   transition: 0.3s all;
+  text-decoration: none;
+
 }
 img{
   width: 100px;
