--- a/pages/catalogo/catalogo.css
+++ b/pages/catalogo/catalogo.css
@@ -11,9 +11,13 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   transition: 0.3s all;
+  text-decoration: none;
+
 }
 
+
 .nav {
+  
   height: 80px;
   display: flex;
   justify-content: space-between;
@@ -45,6 +49,9 @@
   border-end-end-radius: 13px;
   border-start-end-radius: 13px;
   border: 1px solid var(--color-secondary);
+}
+.navDiv a {
+  margin-top: 5px;
 }
 nav a:hover {
   color: rgb(34, 188, 137);
@@ -78,10 +85,13 @@ nav a:hover {
   border-radius: 8px;
   cursor: pointer;
 }
-.button-icon img:hover{
+.cart:hover{
   transform: scale(.9);
 }
-
+.info {
+  transform: scale(.9);
+  color: #606060;
+}
 .ul-catalogo {
     margin: 20px;
     list-style: none;
@@ -115,6 +125,14 @@ nav a:hover {
     line-height: 1;
     text-align: center;
     margin-top: 0.75rem/* 12px */;
+  }
+  #tot-carrito{
+    background-color: rgb(48, 179, 48);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    visibility: hidden;
+
   }
   .li-img-catalogo {
     width: 100px;
