--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   transition: 0.3s all;
+  text-decoration: none;
 }
 
 .nav {
