--- a/pages/catalogo/catalogo.css
+++ b/pages/catalogo/catalogo.css
@@ -1,4 +1,3 @@
-
 :root {
   --color-primary: #a8d4b8;
   --color-secondary: #576c68;
@@ -6,18 +5,16 @@
 }
 
 * {
+  scroll-behavior: smooth;
   background-color: rgb(255, 254, 254);
   color: #576c68;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   transition: 0.3s all;
   text-decoration: none;
-
 }
 
-
 .nav {
-  
   height: 80px;
   display: flex;
   justify-content: space-between;
@@ -38,7 +35,7 @@
   margin: 0px;
   text-align: center;
 }
-.navDiv input:active{
+.navDiv input:active {
   border: 1px solid var(--color-secondary);
 }
 .navDiv button {
@@ -56,14 +53,14 @@
 nav a:hover {
   color: rgb(34, 188, 137);
 }
-.btn-usuario{
-    padding: .5rem;
-    border-width: 1px;
-    border-radius: 0.375rem
+.btn-usuario {
+  padding: 0.5rem;
+  border-width: 1px;
+  border-radius: 0.375rem;
 }
-.btn-usuario:hover{
-    background-color: #576c68;
-    color: white;
+.btn-usuario:hover {
+  background-color: #576c68;
+  color: white;
 }
 .logo {
   width: 250px;
@@ -74,80 +71,135 @@ nav a:hover {
   width: 500px;
   height: 500px;
 }
-.icon-img{
+.icon-img {
   width: 40px;
   height: 40px;
 }
-.button-icon{
+.button-icon {
   border: none;
   padding: 5px;
   margin: 5px;
   border-radius: 8px;
   cursor: pointer;
 }
-.cart:hover{
-  transform: scale(.9);
+.cart:hover {
+  transform: scale(0.9);
 }
-.info {
-  transform: scale(.9);
-  color: #606060;
+.info:hover {
+  transform: scale(0.9);
+}
+#modal {
+  z-index: 999;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  border-radius: 13px;
+  position: fixed;
+  background-color: #576c68;
+  color: var(--color-primary);
+  overflow-y: scroll;
+  height: 300px;
+  width: 70vw;
+  visibility: hidden;
+}
+.modal-sticky {
+  position: sticky;
+  top: -20px;
+}
+.titulo-modal {
+  background-color: var(--color-secondary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.titulo-modal h3,
+.titulo-modal span {
+  background-color: var(--color-secondary);
+  color: var(--color-primary);
+}
+.cerrar-modal {
+  position: absolute;
+  cursor: pointer;
+  right: 5px;
+  top: 5px;
+}
+.table-catalogo {
+  background-color: var(--color-secondary);
+  border: 1px solid var(--color-primary);
+  width: 100%;
 }
 .ul-catalogo {
-    margin: 20px;
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-column-gap: 18px;
-    grid-row-gap: 18px;
-  }
-  .li-catalogo {
-    display: flex;
+  margin: 20px;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-column-gap: 18px;
+  grid-row-gap: 18px;
+}
+.li-catalogo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  border-radius: 18px;
+  border: 1px solid #a8d4b8;
+  box-shadow: 0 15px 25px -5px rgb(0 0 0 / 0.25);
+}
+.blur {
+  backdrop-filter: blur(20px);
+  z-index: 900;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+}
+.div-precio-catalogo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 3px;
+}
+.h1-catalogo {
+  color: #576c68;
+}
+.h1-productos-catalogo {
+  font-size: 3rem /* 48px */;
+  line-height: 1;
+  text-align: center;
+  margin-top: 0.75rem /* 12px */;
+}
+#tot-carrito {
+  background-color: rgb(48, 179, 48);
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  visibility: hidden;
+}
+.li-img-catalogo {
+  width: 100px;
+  height: 100px;
+}
+@media (max-width: 768px) {
+  .nav {
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    border-radius: 18px;
-    border: 1px solid #a8d4b8;
-    box-shadow: 0 15px 25px -5px rgb(0 0 0 / 0.25);
   }
-  .div-precio-catalogo{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 3px;
-  }
-  .h1-catalogo {
-    color: #576c68;
-  }
-  .h1-productos-catalogo{
-    font-size: 3rem/* 48px */;
-    line-height: 1;
-    text-align: center;
-    margin-top: 0.75rem/* 12px */;
-  }
-  #tot-carrito{
-    background-color: rgb(48, 179, 48);
-    color: white;
-    padding: 5px;
-    border-radius: 5px;
-    visibility: hidden;
 
+  .navDiv {
+    flex-direction: column;
+    gap: 5px;
   }
-  .li-img-catalogo {
-    width: 100px;
-    height: 100px;
+  .h1-productos-catalogo {
+    padding-top: 20px;
   }
-  @media (max-width: 768px) {
-    .nav {
-      flex-direction: column;
-    }
-  
-    .navDiv {
-      flex-direction: column;
-      gap: 5px;
-    }
-    .h1-productos-catalogo{
-      padding-top: 20px ;
-    }
+  #modal {
+    width: 90vw;
+    font-size: 14px;
   }
+}
