--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 :root {
   --color-primary: #a8d4b8;
   --color-secondary: #576c68;
@@ -47,12 +46,12 @@
 nav a:hover {
   color: rgb(34, 188, 137);
 }
-.btn-usuario{
-  padding: .5rem;
+.btn-usuario {
+  padding: 0.5rem;
   border-width: 1px;
-  border-radius: 0.375rem
+  border-radius: 0.375rem;
 }
-.btn-usuario:hover{
+.btn-usuario:hover {
   background-color: #576c68;
   color: white;
 }
@@ -85,11 +84,15 @@ nav a:hover {
 .about-p {
   width: 500px;
 }
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
+  * {
+    font-size: xx-large;
+  }
   .nav {
     flex-direction: column;
+    margin-bottom: 60px;
   }
-  .about-h1{
+  .about-h1 {
     padding: 0px;
     background-color: #00000000;
     margin-top: 20px;
@@ -100,12 +103,34 @@ nav a:hover {
     justify-content: space-between;
     flex-direction: row;
   }
- .about{
-  padding-top: 0px;
-  margin: 0px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
- }
+  .logo{
+    display: block;
+    width: 300px;
+    height: 300px;
+  }
+  .about {
+    display: flex;
+    padding-top: 300px;
+    margin: 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+  }
+  .about-p {
+    width: 100%;
+  }
+  .about-h1{
+    font-size: 2em;
+    margin-top: 20px;
+    width: 100%;
+  }
+  .about-h2 {
+    width: 100%;
+  }
+  .shop {
+    width: 100%;
+  }
 }
